# LTrail

./: .gitignore  README.md  RUN.md  render.yaml  start.sh
backend/: README.md  STRUCTURE.md  dependencies.py  main.py  requirements.txt
backend/routes/: __init__.py  health.py  static.py  traces.py  websocket.py
backend/schemas/: __init__.py  trace.py
backend/services/: __init__.py  storage.py  websocket_manager.py
backend/static/static/css/: main.66b9bd1d.css.map
backend/static/static/js/: main.2c1d6920.js  main.2c1d6920.js.map
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: TraceList.jsx  TraceViewer.jsx
frontend/src/hooks/: useTracePolling.jsx
sdk/: DEPLOYMENT.md  README.md  pyproject.toml  setup.ps1
sdk/examples/: __init__.py  competitor_selection.py  comprehensive_competitor_selection.py
sdk/ltrail_sdk/: __init__.py  backend_client.py  core.py  exceptions.py  storage.py
sdk/tests/: __init__.py  test_core.py  test_storage.py
