[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltrail-sdk"
version = "0.1.0"
description = "Decision-level observability for multi-step algorithmic systems"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28.0",
]

authors = [
    { name = "Nancy Yadav", email = "ynancy030@gmail.com" }
]

keywords = [
    "observability",
    "debugging",
    "decision-tracking",
    "ai-systems"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Debugging",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["ltrail_sdk"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
